FIX Add missing web accessible colours and fix image alignment

--- a/css/typography.css
+++ b/css/typography.css
@@ -210,10 +210,8 @@ h6 .heading-anchor-link {
 /*! images */
 img {
     max-width: 100%;
-    border: 1px solid #ccc;
-    padding: 6px;
-    margin: 10px 0;
-    border-radius: 3px;
+    padding: 10px;
+    float: right;
 }
 
 /*! code */
